--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,8 +8,23 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
    <application
-        android:label="orderly"
-        android:icon="@mipmap/ic_launcher">
+        android:label="@string/app_name"
+        android:icon="@mipmap/ic_launcher"
+       android:roundIcon="@mipmap/ic_rounded_launcher"
+       android:largeHeap="true"
+       android:usesCleartextTraffic="true"
+       android:networkSecurityConfig="@xml/network_security_config"
+       >
+<!--       <provider-->
+<!--           android:name="com.pichillilorenzo.flutter_inappwebview.InAppWebViewFileProvider"-->
+<!--           android:authorities="${applicationId}.flutter_inappwebview.fileprovider"-->
+<!--           android:exported="false"-->
+<!--           android:grantUriPermissions="true">-->
+<!--           <meta-data-->
+<!--               android:name="android.support.FILE_PROVIDER_PATHS"-->
+<!--               android:resource="@xml/provider_paths" />-->
+<!--       </provider>-->
+
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
