--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   dio:
   flutter_swiper_null_safety: 1.0.2
   future_progress_dialog: 0.2.0
+#  flutter_inappwebview: ^4.0.0+4
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
