--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,8 @@ dependencies:
   flutter_swiper_null_safety: 1.0.2
   future_progress_dialog: 0.2.0
 #  flutter_inappwebview: ^4.0.0+4
-
+  connectivity: ^3.0.6
+  pull_to_refresh: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
