--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,8 @@ dependencies:
 #  flutter_inappwebview: ^4.0.0+4
   connectivity: ^3.0.6
   pull_to_refresh: ^2.0.0
-
+  razorpay_flutter: ^1.2.3
+  fluttertoast: ^8.0.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
