Nk updated at 21/09/2021 fleet manager(orders,inventory,additem) UI done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,10 +59,12 @@ dependencies:
   pull_to_refresh: ^2.0.0
   razorpay_flutter: ^1.2.3
   fluttertoast: ^8.0.6
-
+#  flutter_custom_switch: ^0.0.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_custom_switch: ^0.0.3
+
 
 dev_dependencies:
   flutter_test:
