--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   overlay_support: ^1.2.1
   flutter_local_notifications: ^8.1.0
   expandable: 5.0.1
-  json_annotation: 4.0.0
+#  json_annotation: 4.0.0
   dio:
   flutter_swiper_null_safety: 1.0.2
   future_progress_dialog: 0.2.0
@@ -64,7 +64,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_custom_switch: ^0.0.3
-
+  flutter_stripe: any
+  stripe_platform_interface: ^1.2.0
+  intl: ^0.17.0
+  readmore: ^2.1.0
 
 dev_dependencies:
   flutter_test:
