Nk updated at 11/10/202 fleet manager:- login,order,update status done and customer:- my order search,detail linking of code done,delete address api integration done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   flutter_stripe: any
   stripe_platform_interface: ^1.2.0
   intl: ^0.17.0
+  timeline_tile: ^1.0.0
   readmore: ^2.1.0
 
 dev_dependencies:
