--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.orderly">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
@@ -7,14 +8,18 @@
     <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
    <application
         android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher"
        android:roundIcon="@mipmap/ic_rounded_launcher"
        android:largeHeap="true"
        android:usesCleartextTraffic="true"
+       android:allowBackup="false"
        android:networkSecurityConfig="@xml/network_security_config"
+       tools:replace="android:allowBackup"
        >
+
 <!--       <provider-->
 <!--           android:name="com.pichillilorenzo.flutter_inappwebview.InAppWebViewFileProvider"-->
 <!--           android:authorities="${applicationId}.flutter_inappwebview.fileprovider"-->
