--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
 #  flutter_inappwebview: ^4.0.0+4
   connectivity: ^3.0.6
   pull_to_refresh: ^2.0.0
+  infinite_scroll_pagination: ^3.1.0
   razorpay_flutter: ^1.2.3
   fluttertoast: ^8.0.6
 #  flutter_custom_switch: ^0.0.3
@@ -69,7 +70,11 @@ dependencies:
   intl: ^0.17.0
   timeline_tile: ^1.0.0
   readmore: ^2.1.0
-  floor: ^1.1.0
+  sqflite: ^2.0.0+4
+  flutter_webview_plugin: ^0.3.11
+  url_launcher: ^6.0.9
+
+
 
 dev_dependencies:
   flutter_test:
