--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.orderly">
+    package="com.orderly.pro">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
@@ -21,7 +21,6 @@
        tools:replace="android:allowBackup"
        android:requestLegacyExternalStorage="true"
        >
-
 
        <!--       <provider-->
 <!--           android:name="com.pichillilorenzo.flutter_inappwebview.InAppWebViewFileProvider"-->
