--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -76,15 +76,13 @@ dependencies:
   flutter_webview_plugin: ^0.3.11
   url_launcher: ^6.0.9
   # open pdf document
-#  open_file: ^3.1.0
-#  pdf: ^3.1.0
+  open_file: ^3.1.0
+  pdf: ^3.1.0
 #  advance_pdf_viewer:
-#  permission_handler: 6.0.0
-#  downloads_path_provider_28:
+  permission_handler: 6.0.0
+  downloads_path_provider_28:
   # save file
 #  path_provider: ^2.0.1
-
-
 
 
 
