Nk updated at 21/01/2022 updated code with Platform changes in UI of ios and android,addess alignment in UI done

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -44,10 +44,12 @@
           <array>
             <string>https</string>
             <string>http</string>
+            <string>whatsapp</string>
           </array>
 	<array>
         <string>UIInterfaceOrientationPortrait</string>
     </array>
+
 	<false/>
 </dict>
 </plist>
