--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,10 @@ dependencies:
   flutter_custom_switch: ^0.0.3
   flutter_stripe: any
   stripe_platform_interface: ^1.2.0
+  #for stripe without firebase
+  flutter_credit_card: ^0.1.3
+#  stripe_payment: ^1.0.7
+#  stripe_payment: ^1.1.0
   intl: ^0.17.0
   timeline_tile: ^1.0.0
   readmore: ^2.1.0
