--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.0.0+11
+version: 2.0.2+11
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -37,10 +37,12 @@ dependencies:
 #  firebase_core: ^1.0.1
   firebase_core: ^1.10.0
   firebase_messaging: ^11.1.0
+  firebase_messaging_platform_interface: 3.1.6
   firebase_auth: ^1.0.1
   google_sign_in: ^5.0.0
   shimmer: 2.0.0
   firebase_crashlytics: ^2.1.1
+  firebase_crashlytics_platform_interface: 3.1.6
   scoped_model: ^1.0.1
   mime: ^1.0.0
   get_version: ^0.2.2
